--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Here’s the updated code with 250 slots in the gallery, each linking to an image in an /images subfolder. The src attributes of each image reference a file inside the images/ folder, and the links can be expanded to your detailed pages if needed.
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -20,7 +20,7 @@ Here’s the updated code with 250 slots in the gallery, each linking to an imag
         const images = [
             { name: "Image 1", src: "images/image1.jpg", link: "details/image1.html" },
             { name: "Image 2", src: "images/image2.jpg", link: "details/image2.html" },
-            { name: "Image 3", src: "images/image3.jpg", link: "details/image3.html" },
+            { name: "Image 3", src: "image3.jpg", link: "details/image3.html" },
             { name: "Image 4", src: "images/image4.jpg", link: "details/image4.html" },
             { name: "Image 5", src: "images/image5.jpg", link: "details/image5.html" },
             { name: "Image 6", src: "images/image6.jpg", link: "details/image6.html" },
@@ -102,6 +102,4 @@ To add more than 250, just continue the pattern of adding entries to the images 
 
 For each new image, place the image file in the images/ folder and link it accordingly.
 
-
-Let me know if you need further modifications!
 
